# sample-retail

./: .gitignore  database.py  pyproject.toml  schema.yaml  server.py
api/: database.py  models.py  server.py
api/sql/: data.sql  items.sql  orders.sql
